@@ -138,6 +138,7 @@
 
 
 
+
                             - Currently selected text.</big><br>
                         </big></small></small></small></big>
                 KKEDIT_DATADIR - Directory of global folder ( eg
@@ -154,10 +155,12 @@
                 $KKEDIT_SELECTION environment variable passed to the
                 command .</big></small></small></small></big><br>
       <big><small><small><small><big><big><small><small><small><big><big>%f
+
                             - Filepath of the current document, the same
                             as the $KKEDIT_CURRENTFILE environment
                             variable passed to the command.</big><br>
                         </big></small></small></small></big></big></small></small></small></big><big><small><small><small><big><big><small><small><small><big><big><small><small><small><big><big><big>%d
+
                                         - Directory of the current
                                         document or ${HOME}, the same as
                                         the $KKEDIT_CURRENTDIR
@@ -188,6 +191,7 @@
                       </small></small></big></big></big></small></small></small></big><small>
       </small>
       <hr size="2" width="100%"><small><big><big><u><b><a name="getanc"></a>Get
+
 
 
 
@@ -229,7 +233,7 @@
           <br>
         </b></u><b>1)</b><small> Make find/replace MUCH more versatile
         with <strike>case insensitive search</strike>,<strike> file
-          wrap</strike>, replace-all and maybe simple regex.</small><br>
+          wrap, replace-all</strike> and maybe simple regex.</small><br>
       <b>2)</b><small> <strike>Set up&nbsp; a proper GUI to build an
           external tool script.</strike><br>
         <big><b>3)</b></big> <strike>Set up a GUI for the preferences.</strike><br>
