@@ -21,7 +21,7 @@
 
 #define MYEMAIL "kdhedger68713@gmail.com"
 #define MYWEBSITE "http://keithhedger.hostingsiteforfree.com"
-#define VERSION "0.0.9"
+#define VERSION "0.0.10"
 
 #define TOOL_ASYNC 8
 #define TOOL_IGNORE_OP 0
